# fastapi-tui

./: main.py  pyproject.toml
src/fastapi_tui/: README.md  __init__.py  app.py  clipboard_utils.py  config.py  configure_tui.py  exception_handler_utils.py  fastapi_tui.py  ipc.py  runner.py  setup.py
src/fastapi_tui/core/: __init__.py  events.py  models.py
src/fastapi_tui/handlers/: __init__.py  exception_handler.py  hit_handler.py  log_handler.py  stats_handler.py
src/fastapi_tui/loggers/: exception_logger.py  runtime_logger.py  server_logger.py
src/fastapi_tui/middleware/: __init__.py  request_logger.py
src/fastapi_tui/persistence/: __init__.py  sqlite.py
src/fastapi_tui/widgets/: __init__.py  auto_scroll_log.py  endpoint_list.py  exception_viewer.py  json_viewer.py  request_inspector.py  request_viewer.py  server_logs_viewer.py  session_manager.py  stats_dashboard.py
