[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "fastapi-tui"
version = "0.1.0"
description = "FastAPI TUI"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "crawl4ai>=0.7.7",
    "docling>=2.64.0",
    "dotenv>=0.9.9",
    "fastapi>=0.124.0",
    "psutil>=7.1.3",
    "supabase>=2.25.0",
    "textual>=6.8.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/fastapi_tui"]
